# opensnitch-tde

./: CMakeLists.txt  README.md  build.sh  build_deb.sh  clean.sh  opensnitch_tde.desktop
scripts/: gen_embedded_icons.sh
src/: about_dialog.cpp  about_dialog.h  config.cpp  config.h  database.cpp  database.h  desktop_parser.cpp  desktop_parser.h  embedded_icons.h  grpc_server.cpp  grpc_server.h  icon_theme.cpp  icon_theme.h  main.cpp  main_window.cpp  main_window.h  net_identity_resolver.cpp  net_identity_resolver.h  nodes.cpp  nodes.h  preferences_dialog.cpp  preferences_dialog.h  process_details_dialog.cpp  process_details_dialog.h  prompt_dialog.cpp  prompt_dialog.h  rule_dialog.cpp  rule_dialog.h  rules.cpp  rules.h  systray.cpp  systray.h  ui_controller.cpp  ui_controller.h
src/mvc/: tqtabstractlistmodel.cpp  tqtabstractlistmodel.h  tqtcommon_p.h  tqtliststore.cpp  tqtmvctableview.cpp  tqtmvctableview.h
src/tdeext/: tqtjson.cpp  tqtjson.h  tqtsettings.cpp  tqtsettings.h  tqtstandardpaths.cpp  tqtstandardpaths.h
